# Classical-Federated-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md
docs/: design_document_v1.md  implementation_methods.md  iu_xray_setup.md  phase0_handoff.md  phase0_protocol.md  presentation_summary.md  progress_summary_s1s2.md  results_summary_full.md  scenario3_notes.md  torch_backend_guide.md
logs/: baseline_centralized.txt  baseline_centralized_cosine.txt  baseline_local_s1_a0.1.txt  baseline_local_s2_a100_hetero.txt  baseline_local_s3_a100_1-3.txt  baseline_local_s4_a100_1-3.txt  s1_fedavg_alpha0.1.txt  s1_fedavg_alpha0.1_final.txt  s1_fedavg_alpha0.1_v2.txt  s1_fedavg_alpha1.0.txt  s1_fedavg_alpha1.0_final.txt  s1_fedavg_alpha1.0_v2.txt  s1_fedavg_alpha100_final.txt  s1_fedprox_alpha0.1.txt  s1_fedprox_alpha0.1_final.txt  s1_fedprox_alpha0.1_v2.txt  s1_fedprox_alpha1.0.txt  s1_fedprox_alpha1.0_final.txt  s1_fedprox_alpha1.0_v2.txt  s1_fedprox_alpha100_final.txt  s2_fedmd_alpha0.1.txt  s2_fedmd_alpha0.1_final.txt  s2_fedmd_alpha1.0.txt  s2_fedmd_alpha1.0_final.txt  s2_fedmd_alpha1.0_temp1.txt  s2_fedmd_alpha100_final.txt  s3_fedavg_1-3_alpha0.1.txt  s3_fedavg_1-3_alpha100.txt  s3_fedavg_3-1_alpha0.1.txt  s3_fedavg_3-1_alpha100.txt  s3_loot_1-3_alpha0.1.txt  s3_loot_1-3_alpha100.txt  s3_loot_3-1_alpha0.1.txt  s3_loot_3-1_alpha100.txt  s3_min_1-3_alpha0.1.txt  s3_min_1-3_alpha100.txt  s3_min_3-1_alpha0.1.txt  s3_min_3-1_alpha100.txt  s3_uniml_alpha100.txt  s4_fedmd_1-3_alpha0.1.txt  (+7 more)
scripts/: iu_baselines.py  iu_build_registry.py  iu_federated.py  (+12 more)
(+114 files in other folders)
