[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qflbench"
version = "0.1.0"
description = "Classical baseline harness for multimodal quantum federated learning"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=1.5",
    "iterative-stratification>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15", "transformers>=4.30", "pillow>=9.0"]
quantum = ["qiskit>=1.0"]
tracking = ["wandb"]
